# sherlock-framework

./: .gitmodules  Cargo.toml  README.md
main/: Cargo.toml  tauri.conf.json
main/src/: main.rs
